add feed statistical analysis logic

--- a/super-comic-buttons/background.html
+++ b/super-comic-buttons/background.html
@@ -3,6 +3,7 @@
     <title>Super Comic Buttons Background Script</title>
     <script src="jquery-3.1.1.min.js"></script>
 	<script src="util.js"></script>
+	<script src="my-array.js"></script>
 	<script src="feed-model.js"></script>
 	<script src="reader.js"></script>
     <script src="background.js"></script>
