log errors as notifications

--- a/super-comic-buttons/background.html
+++ b/super-comic-buttons/background.html
@@ -5,6 +5,7 @@
 	<script src="util.js"></script>
 	<script src="my-array.js"></script>
 	<script src="feed-model.js"></script>
+	<script src="notifications.js"></script>
 	<script src="reader.js"></script>
     <script src="background.js"></script>
 </head>
