--- a/super-comic-buttons/background.html
+++ b/super-comic-buttons/background.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <head>
   <title>Super Comic Buttons Background Script</title>
+  <meta http-equiv="content-type" content="text/html" charset="UTF-8">
   <script src="jquery-3.1.1.min.js"></script>
   <script src="util.js"></script>
   <script src="my-array.js"></script>
