--- a/super-comic-buttons/options.html
+++ b/super-comic-buttons/options.html
@@ -25,10 +25,21 @@
         <label for="syncStoreRadio"><span><span></span></span>Use Firefox Sync</label>
       </div>
     </form>
+  </div>
+  <div class="row">
+    <div class="col-l pad">
+      <p id="forceInfoText">placeholder</p>
+    </div>
+    <div class="col-r padradio">
+        <input type="button" id="forceSaveButton" value="Save to Firefox Sync"></input>
+        <input type="button" id="forceLoadButton" value="Load to Firefox Sync"></input>
+    </div>
+  </div>
+  <div class="row">  
     <div class="col-f"></div>
     <div class="col-l pad">
       <p>
-        Should this program notify you of errors when a feed cannot be read?<br/>
+        Should this program notify you of errors returned when a feed cannot be read?<br/>
         <small>This error information is not likely to be useful</small>
       </p>
       
