--- a/super-comic-buttons/options.html
+++ b/super-comic-buttons/options.html
@@ -7,6 +7,7 @@
   <title>Super Comic Buttons: Options</title>
   <link rel="stylesheet" href="options.css" />
   <script src="jquery-3.1.1.min.js"></script>
+  <script src="storage.js"></script>
   <script src="options.js"></script>
   <script src="notifications.js"></script>
   </head>
