--- a/super-comic-buttons/background.html
+++ b/super-comic-buttons/background.html
@@ -8,5 +8,6 @@
   <script src="feed-model.js"></script>
   <script src="notifications.js"></script>
   <script src="reader.js"></script>
+  <script src="storage.js"></script>
   <script src="background.js"></script>
 </head>
