add popup logic

--- a/super-comic-buttons/popup.html
+++ b/super-comic-buttons/popup.html
@@ -7,10 +7,13 @@
   <title>Super Comic Buttons: Popup</title>
   <link rel="stylesheet" href="style.css" />
   <script src="jquery-3.1.1.min.js"></script>
-  <script src="storage.js"></script>
-  <script src="notifications.js"></script>
+  <script src="popup.js"></script>
 </head>
 
 <body>
-
+  <div class="pad">
+    <input type="button" value="placeholder" id="toggleButton" /><br/>
+    <input type="button" value="Menu" id="menuButton" /><br/>
+    <input type="button" value="Options" id="optionsButton" /><br/>
+  </div>
 </body>
