--- a/super-comic-buttons/popup.html
+++ b/super-comic-buttons/popup.html
@@ -10,12 +10,10 @@
   <script src="popup.js"></script>
 </head>
 
-<body>
-  <div class="pad">
-    <input type="button" value="placeholder" id="toggleButton"/><br/>
-    <input type="button" value="Menu" id="menuButton"/><br/>
-    <input type="button" value="Options" id="optionsButton"/><br/>
-    <input type="button" value="Read 1" id="readOneButton"/><br/>
-    <input type="button" value="Read All!" id="readAllButton"/><br/>
-  </div>
+<body class="light">
+  <input type="button" value="placeholder" id="toggleButton"/><br/>
+  <input type="button" value="Menu" id="menuButton"/><br/>
+  <input type="button" value="Options" id="optionsButton"/><br/>
+  <input type="button" value="Read 1" id="readOneButton"/><br/>
+  <input type="button" value="Read All!" id="readAllButton"/><br/>
 </body>
