--- a/super-comic-buttons/options.html
+++ b/super-comic-buttons/options.html
@@ -21,9 +21,9 @@
     <form>
       <div class="col-r padradio">
         <input id="localStoreRadio" name="mode" type="radio" checked></input>
-        <label for="localStoreRadio"><span><span></span></span>Do not use Firefox Sync</label>
+        <label for="localStoreRadio">Do not use Firefox Sync</label>
         <input id="syncStoreRadio" name="mode" type="radio"></input>
-        <label for="syncStoreRadio"><span><span></span></span>Use Firefox Sync</label>
+        <label for="syncStoreRadio">Use Firefox Sync</label>
       </div>
     </form>
   </div>
@@ -48,9 +48,9 @@
     <form>
       <div class="col-r padradio">
         <input id="noErrorRadio" name="mode" type="radio" checked></input>
-        <label for="noErrorRadio"><span><span></span></span>Do not notify me of errors</label>
+        <label for="noErrorRadio">Do not notify me of errors</label>
         <input id="yesErrorRadio" name="mode" type="radio"></input>
-        <label for="yesErrorRadio"><span><span></span></span>Notify me of errors</label>
+        <label for="yesErrorRadio">Notify me of errors</label>
       </div>
     </form>
     <div class="col-f"></div>
