--- a/super-comic-buttons/menu.html
+++ b/super-comic-buttons/menu.html
@@ -9,6 +9,7 @@
   <script src="jquery-3.1.1.min.js"></script>
   <script src="storage.js"></script>
   <script src="notifications.js"></script>
+  <script src="menu.js"></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <h1>Super Comic Buttons: Menu</h1>
   </div>
   <div>
-  <div id="feedList"></div>
+  <div id="feedListDiv"></div>
   </div>
   <div class="row">
     <div class="fullscreenOnly col-m-0 col-3"><br/></div>
@@ -39,12 +40,12 @@
         </div>
         <div class="typeRadio">
           <div class="col-m-2 padall">
-            <input id="xmlType" name="type" type="radio"/>
-            <label for="xmlType">rss/atom</label>
+            <input id="xmlTypeRadio" name="type" type="radio"/>
+            <label for="xmlTypeRadio">rss/atom</label>
           </div>
           <div class="col-m-2 padall">
-            <input id="domType" name="type" type="radio"/>
-            <label for="domType">html</label>
+            <input id="domTypeRadio" name="type" type="radio"/>
+            <label for="domTypeRadio">html</label>
           </div>
         </div>
       </div>
