add logic to create button

--- a/super-comic-buttons/menu.html
+++ b/super-comic-buttons/menu.html
@@ -7,6 +7,8 @@
   <title>Super Comic Buttons: Menu</title>
   <link rel="stylesheet" href="style.css" />
   <script src="jquery-3.1.1.min.js"></script>
+  <script src="my-array.js"></script>
+  <script src="feed-model.js"></script>
   <script src="storage.js"></script>
   <script src="notifications.js"></script>
   <script src="menu.js"></script>
