add form validation and clear after a create

--- a/super-comic-buttons/menu.html
+++ b/super-comic-buttons/menu.html
@@ -29,7 +29,7 @@
           <label for="nameText">Name</label>
         </div>
         <div class="col-m-2 padall">
-          <input id="nameText" type="text"/>
+          <input class="invalid" id="nameText" type="text"/>
         </div>
         <div class="col-m-1 padall">
           <label for="urlText">Url</label>
