add first row of feed panel

--- a/super-comic-buttons/menu.html
+++ b/super-comic-buttons/menu.html
@@ -12,6 +12,7 @@
   <script src="storage.js"></script>
   <script src="notifications.js"></script>
   <script src="menu.js"></script>
+  <script src="util.js"></script>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <h1>Super Comic Buttons: Menu</h1>
   </div>
   <div>
-  <div id="feedListDiv"></div>
+  <div id="feedListDiv" class="row"></div>
   </div>
   <div class="row">
     <div class="fullscreenOnly col-m-0 col-3"><br/></div>
