--- a/super-comic-buttons/options.html
+++ b/super-comic-buttons/options.html
@@ -16,6 +16,19 @@
   <div class="row">
     <div class="col-f"></div>
     <div class="col-l pad">
+      <p>How frequently should the program automatically check for updates?</p>
+    </div>
+    <form>
+      <div class="col-r padradio">
+        <input id="periodNumber" type="number" min="1"/>
+        <label for="periodNumber">minutes</label>
+        <input id="periodButton", type="button" value="Update"/>
+      </div>
+    </form>
+  </div>
+  <div class="row">
+    <div class="col-f"></div>
+    <div class="col-l pad">
       <p>Should stored data and options use Firefox Sync?</p>
     </div>
     <form>
