fix sync storage text bug and concurrency error

--- a/super-comic-buttons/options.html
+++ b/super-comic-buttons/options.html
@@ -46,7 +46,7 @@
     </div>
     <div class="col-r padradio">
         <input type="button" id="forceSaveButton" value="Save to Firefox Sync"></input>
-        <input type="button" id="forceLoadButton" value="Load to Firefox Sync"></input>
+        <input type="button" id="forceLoadButton" value="Load from Firefox Sync"></input>
     </div>
   </div>
   <div class="row">  
