--- a/super-comic-buttons/background.html
+++ b/super-comic-buttons/background.html
@@ -2,7 +2,7 @@
 <head>
   <title>Super Comic Buttons Background Script</title>
   <meta http-equiv="content-type" content="text/html" charset="UTF-8">
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="lib/jquery-3.3.1.min.js"></script>
   <script src="util.js"></script>
   <script src="my-array.js"></script>
   <script src="feed-model.js"></script>
