--- a/super-comic-buttons/menu.html
+++ b/super-comic-buttons/menu.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Super Comic Buttons: Menu</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="lib/jquery-3.3.1.min.js"></script>
   <script src="my-array.js"></script>
   <script src="feed-model.js"></script>
   <script src="storage.js"></script>
