--- a/super-comic-buttons/popup.html
+++ b/super-comic-buttons/popup.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Super Comic Buttons: Popup</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="lib/jquery-3.3.1.min.js"></script>
   <script src="popup.js"></script>
 </head>
 
