fix build, create interfaces, update popup to typescript

--- a/super-comic-buttons/popup.html
+++ b/super-comic-buttons/popup.html
@@ -12,10 +12,10 @@
 
 <body class="light" style="width: 8em">
   <div class="padall">
-    <input type="button" value="placeholder" id="toggleButton"/><br/>
-    <input type="button" value="Menu" id="menuButton"/><br/>
-    <input type="button" value="Options" id="optionsButton"/><br/>
-    <input type="button" value="Read 1" id="readOneButton"/><br/>
-    <input type="button" value="Read All!" id="readAllButton"/><br/>
+    <input type="button" value="placeholder" id="toggle-button"/><br/>
+    <input type="button" value="Menu" id="menu-button"/><br/>
+    <input type="button" value="Options" id="options-button"/><br/>
+    <input type="button" value="Read 1" id="read-one-button"/><br/>
+    <input type="button" value="Read All!" id="read-all-button"/><br/>
   </div>
 </body>
