migrate options to class, will refactor later

--- a/super-comic-buttons/options.html
+++ b/super-comic-buttons/options.html
@@ -20,9 +20,9 @@
     </div>
     <form>
       <div class="col-r padradio">
-        <input id="periodNumber" type="number" min="1"/>
-        <label for="periodNumber">minutes</label>
-        <input id="periodButton", type="button" value="Update"/>
+        <input id="period-number" type="number" min="1"/>
+        <label for="period-number">minutes</label>
+        <input id="period-button", type="button" value="Update"/>
       </div>
     </form>
   </div>
@@ -33,20 +33,20 @@
     </div>
     <form>
       <div class="col-r padradio">
-        <input id="localStoreRadio" name="mode" type="radio" checked></input>
-        <label for="localStoreRadio">Do not use Firefox Sync</label>
-        <input id="syncStoreRadio" name="mode" type="radio"></input>
-        <label for="syncStoreRadio">Use Firefox Sync</label>
+        <input id="local-store-radio" name="mode" type="radio" checked/>
+        <label for="local-store-radio">Do not use Firefox Sync</label>
+        <input id="sync-store-radio" name="mode" type="radio"/>
+        <label for="sync-store-radio">Use Firefox Sync</label>
       </div>
     </form>
   </div>
   <div class="row">
     <div class="col-l pad">
-      <p id="forceInfoText">placeholder</p>
+      <p id="force-info-text">placeholder</p>
     </div>
     <div class="col-r padradio">
-        <input type="button" id="forceSaveButton" value="Save to Firefox Sync"></input>
-        <input type="button" id="forceLoadButton" value="Load from Firefox Sync"></input>
+        <input type="button" id="force-save-button" value="Save to Firefox Sync"/>
+        <input type="button" id="force-load-button" value="Load from Firefox Sync"/>
     </div>
   </div>
   <div class="row">  
@@ -60,10 +60,10 @@
     </div>
     <form>
       <div class="col-r padradio">
-        <input id="noErrorRadio" name="mode" type="radio" checked></input>
-        <label for="noErrorRadio">Do not notify me of errors</label>
-        <input id="yesErrorRadio" name="mode" type="radio"></input>
-        <label for="yesErrorRadio">Notify me of errors</label>
+        <input id="no-error-radio" name="mode" type="radio" checked/>
+        <label for="no-error-radio">Do not notify me of errors</label>
+        <input id="yes-error-radio" name="mode" type="radio"/>
+        <label for="yes-error-radio">Notify me of errors</label>
       </div>
     </form>
     <div class="col-f"></div>
