wire up creation part of menu using angular

--- a/super-comic-buttons/menu.html
+++ b/super-comic-buttons/menu.html
@@ -1,94 +1,94 @@
 <!DOCTYPE html>
 <html lang="en-UK">
 
-<head>
+<head data-ng-csp>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Super Comic Buttons: Menu</title>
     <link rel="stylesheet" href="style.css" />
     <script src="lib/jquery-3.3.1.min.js"></script>
-    <script src="my-array.js"></script>
-    <script src="feed-model.js"></script>
-    <script src="storage.js"></script>
-    <script src="notifications.js"></script>
+    <script src="lib/angular.min.js"></script>
     <script src="menu.js"></script>
+    <script src="my-array.js"></script>
     <script src="util.js"></script>
 </head>
 
 <body>
-    <div class="row padall fullscreenOnly centre">
-        <h1>Super Comic Buttons: Menu</h1>
-    </div>
-    <div class="row">
-        <div class="fullscreenOnly col-m-0 col-3"><br /></div>
-        <form class="light col-m-12 col-6">
-            <div class="row">
-                <div class="col-m-1 padall">
-                    <label for="nameText">Name</label>
-                </div>
-                <div class="col-m-2 padall">
-                    <input class="invalid" id="nameText" type="text" />
-                </div>
-                <div class="col-m-1 padall">
-                    <label for="urlText">Url</label>
-                </div>
-                <div class="col-m-3 padall">
-                    <input id="urlText" type="text" />
-                </div>
-                <div class="col-m-1 padall">
-                    <label for="typeRadio">Type</label>
-                </div>
-                <div class="typeRadio">
-                    <div class="col-m-2 padall">
-                        <input id="xmlTypeRadio" name="type" type="radio" />
-                        <label for="xmlTypeRadio">rss/atom</label>
+    <div data-ng-app="menu" data-ng-controller="menuCtrl">
+        <div class="row padall fullscreenOnly centre">
+            <h1>Super Comic Buttons: Menu</h1>
+        </div>
+        <div class="row">
+            <div class="fullscreenOnly col-m-0 col-3"><br /></div>
+            <form name="create" class="light col-m-12 col-6">
+                <div class="row">
+                    <div class="col-m-1 padall">
+                        <label for="name">Name</label>
                     </div>
                     <div class="col-m-2 padall">
-                        <input id="domTypeRadio" name="type" type="radio" />
-                        <label for="domTypeRadio">html</label>
+                        <input data-ng-model="name" id="name" type="text" required />
+                    </div>
+                    <div class="col-m-1 padall">
+                        <label for="url">Url</label>
+                    </div>
+                    <div class="col-m-3 padall">
+                        <input data-ng-model="url" id="url" type="text" required />
+                    </div>
+                    <div class="col-m-1 padall">
+                        <label for="type">Type</label>
+                    </div>
+                    <div class="type">
+                        <div class="col-m-2 padall">
+                            <input data-ng-value="'rss'" data-ng-model="type" id="xml-type" name="type" type="radio" />
+                            <label for="xml-type">rss/atom</label>
+                        </div>
+                        <div class="col-m-2 padall">
+                            <input data-ng-value="'html'" data-ng-model="type" id="dom-type" name="type" type="radio" />
+                            <label for="dom-type">html</label>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row" id="specialRow">
-                <p class="col-m-6 padall">
-                    Html mode is less reliable than rss/xml mode, so only use it as a last resort.<br />
-                    It reads a webpage until it finds the object with the id given, and then finds the first image
-                    contained within that object.<br />
-                    Please use the element inspector found in your browsers developer tools to inspect the image or
-                    comic panel on the page you wish to check for updates. If that image has an id, use that. If not,
-                    move to an outer element until you find one with an id to use.
-                    If the image url is relative, you will need to provide the website's root url. If you want to open
-                    the website instead of just opening the image directly, you will need to provide a front page url.<br />
-                    If the target website is redesigned, you will probably need to find a new id.
-                </p>
-                <div class="col-m-2 padall">
-                    <label for="idText">Image Id</label>
+                <div data-ng-show="type==='html'" class="row">
+                    <p class="col-m-6 padall">
+                        Html mode is less reliable than rss/xml mode, so only use it as a last resort.<br />
+                        It reads a webpage until it finds the object with the id given, and then finds the first image
+                        contained within that object.<br />
+                        Please use the element inspector found in your browsers developer tools to inspect the image or
+                        comic panel on the page you wish to check for updates. If that image has an id, use that. If
+                        not, move to an outer element until you find one with an id to use. If the image url is
+                        relative, you will need to provide the website's root url. If you want to open the website
+                        instead of just opening the image directly, you will need to provide a front page url.<br />
+                        If the target website is redesigned, you will probably need to find a new id.
+                    </p>
+                    <div class="col-m-2 padall">
+                        <label for="id">Image Id</label>
+                    </div>
+                    <div class="col-m-4 padall">
+                        <input data-ng-model="id" id="id" type="text" data-ng-required="type==='html'" />
+                    </div>
+                    <div class="col-m-2 padall">
+                        <label for="root">Root Url</label>
+                    </div>
+                    <div class="col-m-4 padall">
+                        <input data-ng-model="root" id="root" type="text" />
+                    </div>
+                    <div class="col-m-2 padall">
+                        <label for="override">Front Page Url</label>
+                    </div>
+                    <div class="col-m-4 padall">
+                        <input data-ng-model="override" id="override" type="text" />
+                    </div>
                 </div>
-                <div class="col-m-4 padall">
-                    <input id="idText" type="text" />
+                <div class="row">
+                    <div class="col-m-2 padall">
+                        <input data-ng-click="createClick()" data-ng-disabled="create.$invalid" type="button" value="Create" />
+                    </div>
                 </div>
-                <div class="col-m-2 padall">
-                    <label for="rootText">Root Url</label>
-                </div>
-                <div class="col-m-4 padall">
-                    <input id="rootText" type="text" />
-                </div>
-                <div class="col-m-2 padall">
-                    <label for="overrideText">Front Page Url</label>
-                </div>
-                <div class="col-m-4 padall">
-                    <input id="overrideText" type="text" />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-m-2 padall">
-                    <input type="button" id="createNewButton" value="Create" />
-                </div>
-            </div>
-        </form>
-        <div class="fullscreenOnly col-m-0 col-3"><br /></div>
-    </div>
-    <div>
-        <div id="feedListDiv" class="row"></div>
+            </form>
+            <div class="fullscreenOnly col-m-0 col-3"><br /></div>
+        </div>
+        <div>
+            <div id="feedListDiv" class="row"></div>
+        </div>
     </div>
 </body>
