--- a/super-comic-buttons/background.html
+++ b/super-comic-buttons/background.html
@@ -6,7 +6,7 @@
     <script src="lib/jquery-3.3.1.min.js"></script>
     <script src="util.js"></script>
     <script src="my-array.js"></script>
-    <script src="feed-model.js"></script>
+    <script src="feed-handler.js"></script>
     <script src="notifications.js"></script>
     <script src="reader.js"></script>
     <script src="storage.js"></script>
